# simple-portal

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: Release.yml
config/: config-example.json  config-example.yaml  content-example.yaml
scripts/: build-release.sh  build_image.sh  install.sh  run.sh
src/: config.py  config.rs  main.rs  run.py
src/templates/: index.html
templates/: index.html
