[package]
name = "simple-portal"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
blake3 = "1.5.0"
lazy_static = "1.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
tera = "1.19.1"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
